添加单例模式和简单工厂模式实现

--- a/DesignPatterns/SimpleFactory/CMakeLists.txt
+++ b/DesignPatterns/SimpleFactory/CMakeLists.txt
@@ -1,11 +1,9 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(Singleton)
-
+project(SimpleFactory)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 AUX_SOURCE_DIRECTORY(. DIR_SRCS)
-
-add_executable(Singleton ${DIR_SRCS})
+add_executable(SimpleFactory ${DIR_SRCS})
