--- a/XNode/StandAloneNode/CMakeLists.txt
+++ b/XNode/StandAloneNode/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 link_directories(../build-NodeLibrary-unknown-Debug/)
 
-add_executable(StandAloneNode main.cpp server.h server.cpp client.h client.cpp standalonenode.h standalonenode.cpp)
+add_executable(StandAloneNode main.cpp standalonenode.h standalonenode.cpp)
 target_link_libraries(StandAloneNode NodeLibrary)
 
 install(TARGETS StandAloneNode
