初步增加节点配置文件

--- a/XNode/CMakeLists.txt
+++ b/XNode/CMakeLists.txt
@@ -6,16 +6,25 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 
+
+
 set(PROJECT_SOURCES
     main.cpp
     xnode.h xnode.cpp
     server.h server.cpp
     client.h client.cpp
+    config.json
 )
 
 add_executable(XNode
     ${PROJECT_SOURCES}
 )
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/config.json
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.json
+    ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
 
 #add_executable(XNode main.cpp xnode.h xnode.cpp)
 
